2004-05-16  n1xt3r  <n1xt3r@scorcher>

	* ChangeLog, plugins/atom.sh, plugins/rss.sh:
	Loads autoformat plugins from inside.

	* ChangeLog, nb:
	(make_archive),(build_archives),(edit_blog): Autoformat plugins no longer
	overwrite (possibly destroy) the entry's metadata.

2004-05-11  n1xt3r  <n1xt3r@scorcher>

	* ChangeLog, docs/nanoblogger.html:
	Lots of minor updates to the documentation.

2004-05-08  n1xt3r  <n1xt3r@scorcher>

	* ChangeLog, nb (nb_main):
	Removed prompt for directory creation, now done automatically.

2004-05-06  n1xt3r  <n1xt3r@scorcher>

	* ChangeLog, nb (nb_main):
	Fixed "bye" typo in blog directory creation prompt.

	* ChangeLog, nb (build_archives):
	Replaced generation of "cat_n.db.htm" with "cat_n.htm" in $PARTS_DIR.

	* ChangeLog, default/archives/2004-01-18T17_12_12.htm, default/archives/cat_1.html, default/archives/monthly/2004-01.html, default/atom.xml, default/index.html, default/parts/2004-01.htm, default/parts/blog_status.htm, default/parts/fortune.htm, default/parts/news.htm:
	Updated support information in the default entry.

	* nb (delete_blog): Added test for existance of entry's file.

	* ChangeLog, default/archives/2004-01-18T17_12_12.htm, default/archives/cat_1.html, default/archives/monthly/2004-01.html, default/atom.xml, default/index.html, default/parts/2004-01.htm, default/parts/blog_status.htm, default/parts/fortune.htm, default/parts/news.htm:
	Updated intro/help entry for default.

2004-05-04  n1xt3r  <n1xt3r@scorcher>

	* ChangeLog, plugins/01_mymood.off: Fixed a broken sed command.

	* ChangeLog, nb, plugins/01_mymood.off, plugins/archive/monthly/monthly-cal.sh, plugins/articles.off, plugins/autoformat/moods.sh, plugins/calendar.sh, plugins/fortune.sh, plugins/list_entries.sh, plugins/postformat/tidy.sh:
	Converted sed substitute commands to shorthand for increase in speed.

	* ChangeLog, plugins/autoformat/auto_break.sh:
	Reverted auto formmating back to old behaviour.

2004-05-02  n1xt3r  <n1xt3r@scorcher>
