@@ -91,8 +91,8 @@ BLOG_CONF="$BLOG_DIR/blog.conf"
 [ -z "$BLOG_URL_ACTION" ] && BLOG_URL_ACTION="$BLOG_URL/"
 # if NB_FILETYPE not defined, default to html
 [ -z "$NB_FILETYPE" ] && NB_FILETYPE="html"
-# if NB_SYND_FILETYPE not defined, default to rdf
-[ -z "$NB_SYND_FILETYPE" ] && NB_SYND_FILETYPE="rdf"
+# if NB_SYND_FILETYPE not defined, default to xml
+[ -z "$NB_SYND_FILETYPE" ] && NB_SYND_FILETYPE="xml"
 # if time zone not defined default to AUTO_NBTZD
 [ -z "$BLOG_TZD" ] && BLOG_TZD="$AUTO_TZD"
 }
