@@ -31,12 +31,12 @@ build_atomfeed(){
 
 
 nb_msg "generating atom feed ..."
-build_atomfeed current nocat "$ATOMENTRY_TEMPLATE" atom.xml
-rm -f "$BLOG_DIR/$PARTS_DIR/atom.xml"
+build_atomfeed current nocat "$ATOMENTRY_TEMPLATE" atom."$NB_SYND_FILETYPE"
+rm -f "$BLOG_DIR/$PARTS_DIR/atom.$NB_SYND_FILETYPE"
 NB_Entries="$PLACEHOLDER"
 
 # make atom feed (alternate to calling make_page)
-MKPAGE_OUTFILE="$BLOG_DIR/atom.xml"
+MKPAGE_OUTFILE="$BLOG_DIR/atom.$NB_SYND_FILETYPE"
 load_template "$ATOMFEED_TEMPLATE"
 echo "$BLOG_HTML" > "$MKPAGE_OUTFILE"
 nb_msg "$MKPAGE_OUTFILE"
