@@ -1,3 +1,8 @@
+2004-05-19  n1xt3r  <n1xt3r@scorcher>
+
+	* ChangeLog, docs/nanoblogger.html:
+	Updated cgicomment and microblogger links.
+
 2004-05-16  n1xt3r  <n1xt3r@scorcher>
 
 	* ChangeLog, plugins/atom.sh, plugins/rss.sh:
